[package]
name = "conary"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Conary Contributors"]
description = "Modern package manager with atomic operations, rollback, and delta updates"
repository = "https://github.com/yourusername/conary"
license = "MIT OR Apache-2.0"
keywords = ["package-manager", "rpm", "deb", "system"]
categories = ["command-line-utilities"]

[dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Hashing for file integrity
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds in development
incremental = true
