[package]
name = "conary"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Conary Contributors"]
description = "Modern package manager with atomic operations, rollback, and delta updates"
repository = "https://github.com/yourusername/conary"
license = "MIT OR Apache-2.0"
keywords = ["package-manager", "rpm", "deb", "system"]
categories = ["command-line-utilities"]

[dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# Hashing for file integrity
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Package format parsing
rpm = "0.14"

# Temp files for RPM extraction
tempfile = "3.10"

# Version parsing and comparison
semver = "1.0"

# HTTP client for repository downloads
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }

# JSON serialization for repository metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling for repository sync timestamps
chrono = "0.4"

# Delta compression for efficient updates
zstd = "0.13"

# Parallel processing for concurrent downloads
rayon = "1.8"

# GPG signature verification (pure Rust OpenPGP implementation)
# Note: Using RustCrypto backend with experimental and variable-time flags
# This is acceptable for a package manager use case
sequoia-openpgp = { version = "1.17", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

# Repository metadata parsing
tar = "0.4"                     # Tarball extraction for Arch repos
flate2 = "1.0"                  # Gzip compression (for Arch, Debian, Fedora)
xz2 = "0.1"                     # XZ compression (for Arch)
rfc822-like = "0.2"             # RFC 822 parser for Debian/Ubuntu Packages files
quick-xml = "0.31"              # XML parser for Fedora/RPM repodata
ar = "0.9"                      # AR archive parsing for DEB packages

[dev-dependencies]

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_mangen = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds in development
incremental = true
